data/derived/sp14/progs/unify/prog3385.ml.out
Characters 64-76:
  | h::t -> aux (h::acc)  in
            ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type 'a list
